[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "faker_wifi_essid"
authors = [
  {name = "Paul-Emmanuel Raoul", email = "skyper@skyplabs.net"},
]
description = "Faker provider for Wi-Fi ESSIDs."
readme = "README.rst"
keywords = ["faker", "faker-library", "faker-provider", "faker-generator", "wifi", "essid"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9, <4"
dependencies = [
  "Faker >= 4.1,< 34.0",
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/SkypLabs/faker-wifi-essid/issues"
Repository = "https://github.com/SkypLabs/faker-wifi-essid"

[project.optional-dependencies]
dev = ["ruff"]
docs = ["Sphinx >= 3.2", "sphinx_rtd_theme >= 0.5.0"]
tests = ["tox"]

[tool.setuptools.dynamic]
version = {attr = "faker_wifi_essid.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
