[metadata]
name = faker_wifi_essid
version = 0.4.1
description = Faker provider for Wi-Fi ESSIDs.
long_description = file: README.rst
keywords = faker, faker-library, faker-provider, faker-generator, wifi, essid
license = MIT
license_files = LICENSE
author = Paul-Emmanuel Raoul
author_email = skyper@skyplabs.net
url = https://github.com/SkypLabs/faker-wifi-essid
project_urls =
    Bug Tracker = https://github.com/SkypLabs/faker-wifi-essid/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7, <4
install_requires =
    Faker >= 4.1,< 14.0

[options.packages.find]
where = src

[options.extras_require]
tests = flake8; pylint; tox
docs = Sphinx >= 3.2; sphinx_rtd_theme >= 0.5.0
